--- a/presentations/shared/styles.css
+++ b/presentations/shared/styles.css
@@ -51,3 +51,9 @@ iframe.full {
     width: 100%;
     height: 600px;
 }
+
+figcaption,
+p.caption {
+    font-style: italic;
+    text-align: center;
+}
